load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@//tools/python:py_oci_image.bzl", "py_oci_image")

deps = [
    requirement("slack_bolt"),
    requirement("requests"),
    requirement("quart"),
    requirement("aiohttp"),
    requirement("pytest"),
    requirement("slackblocks"),
    "//pylib",
]

py_binary(
    name = "tn_alerts_app",
    srcs = glob(
        ["*.py"]
    ),
    deps = deps,
)

py_oci_image(
    name = "oci_image",
    base = "@bazel_image_6_5_0",
    binary = ":alerts_receiver",
)
