[tool.poetry]
name = "bn-service-discovery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bn_service_discovery"}]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.37"
pyyaml = "^6.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
