load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@//k8s:oci_images.bzl", "python_oci_image_rules")

py_binary(
    name = "clickhouse-table-creator",
    srcs = ["clickhouse-table-creator.py"],
    deps = [
        requirement("clickhouse-connect"),
    ],
)

python_oci_image_rules(
    name = "oci_image",
    src = ":clickhouse-table-creator",
)