[tool.poetry]
name = "cursor-intialization-clickhouse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cursor_intialization_clickhouse"}]

[tool.poetry.dependencies]
python = "^3.8"
clickhouse-connect = "^0.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
