load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@//k8s:oci_images.bzl", "python_oci_image_rules")

py_binary(
    name = "cursor-initializator-elastic",
    srcs = ["cursor-initializator-elastic.py"],
    deps = [
        requirement("elasticsearch"),
    ],
)

python_oci_image_rules(
    name = "oci_image",
    src = ":cursor-initializator-elastic",
    base_image = "@debian-slim"
)