load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@//k8s:oci_images.bzl", "python_oci_image_rules")

py_binary(
    name = "elastic-backup",
    srcs = ["elastic-backup.py"],
    deps = [
        requirement("requests"),
    ],
)

python_oci_image_rules(
    name = "oci_image",
    src = ":elastic-backup",
    base_image = "@python3"
)