load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@//k8s:oci_images.bzl", "python_oci_image_rules")

py_binary(
    name = "elastic-retention-enforcer",
    srcs = ["elastic-retention-enforcer.py"],
    deps = [
        requirement("elasticsearch"),
        requirement("humanfriendly"),
    ],
)

python_oci_image_rules(
    name = "oci_image",
    src = ":elastic-retention-enforcer",
)