[package]
name = "log_vector_config_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-discovery = { path = "../service_discovery" }
tokio = { workspace = true }
slog = { workspace = true }
slog-async = { version = "2.5", features = ["nested-values"] }
slog-term = "2.6.0"
anyhow = "1.0.31"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam = "0.8.0"
crossbeam-channel = "0.5.5"
futures-util = "0.3.5"
humantime = "2.0"
ic-config = { workspace = true }
ic-async-utils = { workspace = true }
ic-metrics = { workspace = true }
ic-http-endpoints-metrics = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
url = "2.2.2"
config_writer_common = { path = "../config_writer_common" }

[[bin]]
name = "log_vector_config_generator"
path = "src/main.rs"
