[package]
name = "multiservice_discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
url = "2.2.2"
service-discovery = { path = "../service_discovery" }
slog = { workspace = true }
slog-async = { version = "2.5", features = ["nested-values"] }
slog-term = "2.6.0"
ic-registry-client = { workspace = true }
ic-async-utils = { workspace = true }
futures-util = "0.3.5"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam = "0.8.0"
crossbeam-channel = "0.5.5"
humantime = "2.0"
warp = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
ic-utils = { workspace = true }
erased-serde = "0.3.23"
regex = { workspace = true }
ic-types = { workspace = true }
multiservice_discovery_shared = { path = "../multiservice_discovery_shared" }
ic-crypto-utils-threshold-sig-der = { workspace = true }
base64 = "0.13.1"
